# hkipo_analyzer

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  debug_dropdown.py  docker-compose.yml  dogfood_runner_nextjs.py  dogfood_test.py  dogfood_test_enhanced.py  nginx.conf  nginx.full.conf  pyproject.toml  requirements.txt  security_best_practices_report.md  style.css  test_debug_regex.py  test_extract_debug.py  test_founder_regex.py  test_profit_debug.py  test_selectbox_detailed.py
.streamlit/: config.toml
api/: auth.py  config.py  deps.py  main.py
data/: allotment_history.yaml  cornerstone_investors.yaml  gics_mapping.yaml  peer_comps.yaml  sources.yaml  sponsor_track_record.yaml
docs/: progress-report.md
dogfood-output/: debug_selectbox.html  report.md  test_results.json  test_results_detailed.json  web-design-guidelines-review.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
ipo_analyzer/: __init__.py  __main__.py  _threadsafe_cache.py  _url_validation.py  a_b_group_strategy.py  allotment_predictor.py  analyzers.py  board_heat.py  cache.py  clawback_impact.py  core.py  cornerstone.py  db_pool.py  downloader.py  float_dryness.py  greenshoe_analyzer.py  grey_market_signal.py  history.py  identity_validator.py  industry_router.py  ipo_calendar.py  ipo_sentiment.py  json_utils.py  macro_factors.py  margin_validator.py  market_heat.py  models.py  parser.py  peer_auto_expand.py  peer_comps.py  peer_data.py  playwright_browser.py  post_listing.py  prospectus_basic_extractor.py  quality_analyzer.py  report.py  scoring.py  sell_timing_advisor.py  settings.py  signal_analyzer.py  (+4 more)
reports/: ipo_backtest_summary.md
scripts/: debug_06872.py  debug_all_pdfs.py  debug_blank_fields.py  debug_board_heat.py  debug_business_breakdown.py  debug_business_root_cause.py  debug_business_terminology.py  debug_cornerstone.py  debug_cornerstone2.py  debug_cornerstone3.py  debug_cornerstone4.py  debug_depth_analysis.py  debug_identity.py  debug_jitai.py  debug_long_term_score.py  debug_sector_data_flow.py  debug_sector_flow.py  package_project.sh  reanalyze_06872.py  test_all_pages.py  test_audit.py  test_audit_home.py  test_audit_home2.py  test_audit_home3.py  test_backtest_framework.py  test_blogger.py  test_blogger2.py  test_blogger3.py  test_blogger_comprehensive.py  test_blogger_final.py  test_comprehensive.py  test_comprehensive2.py  test_core_pipeline.py  test_cornerstone_extract.py  test_cornerstone_match.py  test_cornerstone_v2.py  test_debug.py  test_debug2.py  test_final.py  test_layout.py  (+13 more)
temp/: test_fix2.py  test_score.py
(+258 files in other folders)
